# pyBotterTg

./: .bot.env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Pipfile  README.md  bot.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
actions/: currency.py  google.py  instagram.py  log.py  quotes.py  virus.py  weather.py  xcom.py
quotes/: #nnm.txt
